# Diabetes-Health-Indicators

./: .gitignore  Dockerfile  Makefile  ProjectFlow.txt  README.md  dvc.yaml  main.py  pyproject.toml  render-run.yaml  setup.py
.github/workflows/: render.yaml
data/raw/: test.csv
docs/: Makefile  conf.py  index.rst  make.bat
flask_app/: app.py
flask_app/templates/: healthform_flask.html  heathform.html
models/: GNB_model.pkl  KNN_model.pkl  SVC_model.pkl  final.yaml  preprocessing.pkl
notebooks/: Results_Number_of_Features.csv  dataprocessing.ipynb
reports/: GradientBoostingExpInfo.json  GradientBoostingMetrics.json
src/config/: model.yaml  schema.yaml
src/constants/: __init__.py
src/data/: data_ingestion.py
src/logger/: __init__.py
src/model/: model_trainer.py  register_model.py
