[project]
name = "diabetes-health-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.3",
    "datetime>=5.5",
    "dvc>=3.64.0",
    "logging>=0.4.9.6",
    "mlflow<3",
    "scikit-learn>=1.7.2",
]
