[project]
name = "diabetes-health-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.3",
    "datetime>=5.5",
    "dill>=0.4.0",
    "dvc>=3.64.0",
    "imblearn>=0.0",
    "logging>=0.4.9.6",
    "mlflow<3",
    "scikit-learn>=1.7.2",
]
